add new fitches 'update profile', 'get category'
