# src/modules/todo/todo.routes.ts
@@ -4,8 +4,8 @@ import { adminMiddleware, authMiddleware } from "../auth/midleware";
 
 const router = Router();
 
-router.get("/getAll", authMiddleware, todoControllers.getAllProducts);
-router.get("/getById/:id", authMiddleware, todoControllers.getOne);
+router.get("/getAll", todoControllers.getAllProducts);
+router.get("/getById/:id", todoControllers.getOne);
 router.post("/create", authMiddleware, todoControllers.createProducts);
 router.put("/update/:id", authMiddleware, todoControllers.updateProducts);
 router.delete("/delete/:id", authMiddleware, todoControllers.deleteOnproducts);
@@ -20,6 +20,7 @@ router.delete(
   adminMiddleware,
   todoControllers.deleteAll
 );
+router.get("/getByCategory/:category", todoControllers.getProductsByCategory);
 // router.get("/get-product/:id", authMiddleware, todoControllers."");
 // router.get("/search/:value", todoControllers.getOne);
 
